= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.03.001

Release with new features and bugfixes:

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/23?closed=1[milestone 2025.03.001].

== 2025.02.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/420[#420]: Add MSI Build and Deployment
* https://github.com/devonfw/IDEasy/issues/1061[#1061]: Mac: no such file or directory: /_ide/installation/functions
* https://github.com/devonfw/IDEasy/issues/789[#789]: Add support to uninstall
* https://github.com/devonfw/IDEasy/issues/1065[#1065]: NullPointerException in MavenRepository.getDownloadedArtifact
* https://github.com/devonfw/IDEasy/issues/1060[#1060]: Command "ide status" doesn't show information about a pending upgrade when started outside of project

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/22?closed=1[milestone 2025.02.002].

== 2025.02.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/982[#982]: Ability for user specific IDE configuration
* https://github.com/devonfw/IDEasy/issues/925[#925]: IDEasy can not handle a faulty definition of JAVA_HOME

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/21?closed=1[milestone 2025.02.001].

== 2025.01.003

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/993[#993]: Creation of start scripts for IDEs
* https://github.com/devonfw/IDEasy/pull/1003[#1003]: graalvm compatibility mode to make x86-64 releases work on arm-64
* https://github.com/devonfw/IDEasy/issues/954[#954]: Improve repository support
* https://github.com/devonfw/IDEasy/issues/993[#993]: Creation of start scripts for IDEs
