@@ -39,6 +39,7 @@ import com.devonfw.tools.ide.tool.node.Node;
 import com.devonfw.tools.ide.tool.npm.Npm;
 import com.devonfw.tools.ide.tool.oc.Oc;
 import com.devonfw.tools.ide.tool.pgadmin.PgAdmin;
+import com.devonfw.tools.ide.tool.python.Python;
 import com.devonfw.tools.ide.tool.quarkus.Quarkus;
 import com.devonfw.tools.ide.tool.sonar.Sonar;
 import com.devonfw.tools.ide.tool.terraform.Terraform;
@@ -124,6 +125,7 @@ public class CommandletManagerImpl implements CommandletManager {
     add(new GraalVm(context));
     add(new PgAdmin(context));
     add(new LazyDocker(context));
+    add(new Python(context));
   }
 
   /**
