@@ -78,6 +78,8 @@ cmd.oc=Werkzeug Kommando für Openshift CLI (Kubernetes Management Tool).
 cmd.oc.detail=OpenShift CLI (oc) ist ein Befehlszeilentool zur Verwaltung von OpenShift-Clustern. Detaillierte Dokumentation ist zu finden unter https://docs.openshift.com/
 cmd.pgadmin=Werkzeug Kommando für pgAdmin.
 cmd.pgadmin.detail=pgAdmin ist ein Open-Source-Verwaltungswerkzeug for PostgreSQL und verwandte relationale Datenbanken. Detaillierte Dokumentation ist zu finden unter https://www.pgadmin.org/docs/pgadmin4/latest/index.html
+cmd.python=Werkzeug Kommando für Python.
+cmd.python.detail=Python ist eine objektorientierte Programmiersprache, vergleichbar mit Perl, Ruby, Scheme oder Java. Detaillierte Dokumentation ist zu finden unter https://www.python.org/doc/
 cmd.quarkus=Werkzeug Kommando für Quarkus (Framework für Cloud-native Anwendungen).
 cmd.quarkus.detail=Quarkus ist ein Kubernetes-native Java-Framework zur Entwicklung von Cloud-native Anwendungen. Detaillierte Dokumentation ist zu finden unter https://quarkus.io/
 cmd.repository=Richtet das vorkonfigurierte Git Repository ein mittels 'ide repository setup <repository>'.
